bottom alignment correct. Working on top alignment

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,68 @@
-body {
+.top-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-};
-
-.container {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
-  height: 100vh;
-}
-
-div {
-  margin: 10px;
-  text-align: center;
 }
 
 #title {
-  margin-right: auto;
-  align-self: flex-start;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+#gift-price {
+  display: flex;
+  border: 3px solid black;
+  gap: 1rem;
+}
+
+#people {
+  display: flex;
+  border: 3px solid black;
 }
 
 #title-gift {
-  margin-right: auto;
-  align-self: flex-start;
+  font-size: 18px;
+  margin-top: 10px;
 }
 
 #price {
-  margin-left: auto;
-  align-self: flex-end;
+  font-size: 18px;
+  margin-top: 10px;
+  border: 3px blue solid;
+}
+
+#from,
+#to {
+  margin-top: 10px;
+}
+
+#background {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-image: url("https://static.vecteezy.com/system/resources/thumbnails/001/840/688/small_2x/green-grass-hill-background-isolated-on-white-outdoor-abstract-background-for-natural-template-design-free-vector.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+#website,
+#bottom-middle,
+#GCNumber {
+  position: absolute;
+  bottom: 20px;
+  font-size: 18px;
+  background-color:white;
+  border: 3px solid black ;
+}
+
+#website {
+  left: 20px;
+}
+
+#bottom-middle {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#GCNumber {
+  right: 20px;
 }
